--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,3 +1,12 @@
 @import 'tailwindcss/base';
 @import 'tailwindcss/components';
 @import 'tailwindcss/utilities';
+
+.jeopardy-font {
+    font-family: 'Oswald', sans-serif;
+    font-weight: 600;
+}
+
+.text-shadow {
+    text-shadow: 2px 2px 2px #000000;
+}
